Update foot font to UbuntuMono

--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -9,6 +9,7 @@
 # locked-title=no
 
  font=Hack-Regular:size=10:antialias=true:autohint=false
+ font=UbuntuMono:size=12:antialias=true:autohint=false
 # font-bold=<bold variant of regular font>
 # font-italic=<italic variant of regular font>
 # font-bold-italic=<bold+italic variant of regular font>
