Update foot colorscheme

--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -9,7 +9,7 @@
 # locked-title=no
 
  font=Hack-Regular:size=10:antialias=true:autohint=false
- font=UbuntuMono:size=12:antialias=true:autohint=false
+ font=UbuntuMono:antialias=true:autohint=false:size=12
 # font-bold=<bold variant of regular font>
 # font-italic=<italic variant of regular font>
 # font-bold-italic=<bold+italic variant of regular font>
@@ -131,38 +131,98 @@ color = 2e3440 d8dee9
 # this specific foot theme is based on nord-alacritty:
 # https://github.com/arcticicestudio/nord-alacritty/blob/develop/src/nord.yml
 
-foreground = d8dee9
-background = 2e3440
+# foreground = d8dee9
+# background = 2e3440
+#
+# # selection-foreground = d8dee9
+# # selection-background = 4c566a
+#
+# regular0 = 3b4252
+# regular1 = bf616a
+# regular2 = a3be8c
+# regular3 = ebcb8b
+# regular4 = 81a1c1
+# regular5 = b48ead
+# regular6 = 88c0d0
+# regular7 = e5e9f0
+#
+# bright0 = 4c566a
+# bright1 = bf616a
+# bright2 = a3be8c
+# bright3 = ebcb8b
+# bright4 = 81a1c1
+# bright5 = b48ead
+# bright6 = 8fbcbb
+# bright7 = eceff4
+#
+# dim0 = 373e4d
+# dim1 = 94545d
+# dim2 = 809575
+# dim3 = b29e75
+# dim4 = 68809a
+# dim5 = 8c738c
+# dim6 = 6d96a5
+# dim7 = aeb3bb
 
-# selection-foreground = d8dee9
-# selection-background = 4c566a
 
-regular0 = 3b4252
-regular1 = bf616a
-regular2 = a3be8c
-regular3 = ebcb8b
-regular4 = 81a1c1
-regular5 = b48ead
-regular6 = 88c0d0
-regular7 = e5e9f0
+##### custom monokai pro light
 
-bright0 = 4c566a
-bright1 = bf616a
-bright2 = a3be8c
-bright3 = ebcb8b
-bright4 = 81a1c1
-bright5 = b48ead
-bright6 = 8fbcbb
-bright7 = eceff4
+background = faf4f2
+foreground = 29242a
 
-dim0 = 373e4d
-dim1 = 94545d
-dim2 = 809575
-dim3 = b29e75
-dim4 = 68809a
-dim5 = 8c738c
-dim6 = 6d96a5
-dim7 = aeb3bb
+regular0 = 403E41
+bright0 = 727072
+regular1 = e16032
+bright1 = e16032
+regular2 = 269d69
+bright2 = 269d69
+regular3 = cc7a0a
+bright3 = cc7a0a
+regular4 = 2257a0
+bright4 = 2257a0
+regular5 = 7058be
+bright5 = 7058be
+regular6 = 1c8ca8
+bright6 = 1c8ca8
+regular7 = CCCCCA
+bright7 = CCCCCA
+
+
+# mis-ordered monokai pro light
+#regular0 = 403E41
+#regular1 = e14775
+#regular2 = e16032
+#regular3 = 269d69
+#regular4 = cc7a0a
+#regular5 = 7058be
+#regular6 = 1c8ca8
+#regular7 = CCCCCA
+#bright0 = 727072
+#bright1 = e14775
+#bright2 = e16032
+#bright3 = 269d69
+#bright4 = cc7a0a
+#bright5 = 7058be
+#bright6 = 1c8ca8
+#bright7 = CCCCCA
+
+#regular0=403E41
+#regular1=FF6188
+#regular2=A9DC76
+#regular3=FFD866
+#regular4=FC9867
+#regular5=AB9DF2
+#regular6=78DCE8
+#regular7=FCFCFA
+#bright0=727072
+#bright1=FF6188
+#bright2=A9DC76
+#bright3=FFD866
+#bright4=FC9867
+#bright5=AB9DF2
+#bright6=78DCE8
+#bright7=FCFCFA
+
 
 [csd]
 # preferred=server
