--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -2,6 +2,7 @@
 
 # shell=$SHELL (if set, otherwise user's default shell from /etc/passwd)
 # term=foot (or xterm-256color if built with -Dterminfo=disabled)
+term=xterm-256color
 # login-shell=no
 
 # app-id=foot # globally set wayland app-id. Default values are "foot" and "footclient" for desktop and server mode
@@ -79,7 +80,7 @@ color = 2e3440 d8dee9
 # long-press-delay=400
 
 [colors]
-# alpha=1.0
+alpha=0.9
 # background=242424
 # foreground=ffffff
 # flash=7f7f00
