Add dark monokai-pro theme for foot and nvim

--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -80,7 +80,7 @@ color = 2e3440 d8dee9
 # long-press-delay=400
 
 [colors]
-alpha=0.9
+alpha=0.95
 # background=242424
 # foreground=ffffff
 # flash=7f7f00
@@ -188,6 +188,25 @@ bright6 = 1c8ca8
 regular7 = CCCCCA
 bright7 = CCCCCA
 
+##### https://codeberg.org/dnkl/foot/src/branch/master/themes/monokai-pro
+background=2D2A2E
+foreground=FCFCFA
+regular0=403E41
+regular1=FF6188
+regular2=A9DC76
+regular3=FFD866
+regular4=FC9867
+regular5=AB9DF2
+regular6=78DCE8
+regular7=FCFCFA
+bright0=727072
+bright1=FF6188
+bright2=A9DC76
+bright3=FFD866
+bright4=FC9867
+bright5=AB9DF2
+bright6=78DCE8
+bright7=FCFCFA
 
 # mis-ordered monokai pro light
 #regular0 = 403E41
